spacing fix II, made abbrs. bold

--- a/periodictable/style.css
+++ b/periodictable/style.css
@@ -63,5 +63,5 @@ a:hover {
 	height: 850px;
 	display: grid;
 	grid-template-columns: 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px 85px;
-	grid-template-rows: 92px 92px 92px 92px 92px 92px 105px 92px 92px;
+	grid-template-rows: 94px 94px 94px 94px 94px 94px 107px 94px 94px;
 }
